# TensorRT-YOLOv8

./: LICENSE  README-en.md  README.md
C++/: CMakeLists.txt  README-en.md  README.md  main.cpp
C++/detect/: README-en.md  README.md  main.cpp
C++/origin_version/segment_origin_version/: CMakeLists.txt  README.md  trt_infer.cpp
C++/origin_version/segment_origin_version/src/: calibrator.cpp  draw.cu
C++/origin_version/segment_origin_version/test/crop_mask/: Makefile  crop.cpp  postprocess.cu  postprocess.h
C++/origin_version/segment_origin_version/test/cut_mask/: Makefile  cut.cpp  postprocess.cu  postprocess.h
C++/origin_version/segment_origin_version/test/draw_mask/: Makefile  draw.cpp
C++/origin_version/segment_origin_version/test/matrix_mul/: Makefile  matmul.cpp  postprocess.cu  postprocess.h
C++/origin_version/segment_origin_version/test/resize/: Makefile  postprocess.cu  postprocess.h  resize.cpp
C++/pose/: CMakeLists.txt  README-en.md  README.md  main.cpp
C++/segment/: CMakeLists.txt  README-en.md  README.md  main.cpp
python/: README-en.md  README.md  track.py
python/detect/: README-en.md  README.md  __init__.py  calibrator.py  config.py  infer.py  infer_origin.py  main.py  postprocess.py  preprocess.py
python/pose/: README-en.md  README.md  config.py  infer.py  infer_origin.py  main.py  postprocess.py
python/segment/: README-en.md  README.md  config.py  infer.py  infer_origin.py  main.py  postprocess.py
python/tracker/: __init__.py  byte_tracker.py  kalman_filter.py  matching.py
triton/client/: config.py  grpc_client_image.py  (+1 more)
(+51 files in other folders)
